[package]
name = "rmididings"
version = "0.2.0"
authors = ["wvengen"]

description = "Write your own MIDI router/processor, inspired by mididings."
repository = "https://github.com/wvengen/rmididings"
keywords = ["MIDI", "ALSA", "music"]
license = "GPL-3.0-or-later"
categories = ["multimedia::audio"]
readme = "README.md"
edition = "2018"

[features]
default = ["alsa", "osc"]
osc = ["rosc"]

[dependencies]
libc = "^0.2.97"
alsa = { version = "^0.5.0", optional = true }
rosc = { version = "^0.5.2", optional = true }
dbus = { version = "^0.9.3", optional = true }
