[package]
name = "rmididings-macros"
version = "0.2.1"
authors = ["wvengen"]
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
